added media query

--- a/css/style.css
+++ b/css/style.css
@@ -216,3 +216,31 @@ footer {
   justify-content: center;
   align-items: center;
 }
+
+@media (min-width: 960px) {
+  body {
+    background-image: url("../img/sfondo-big.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+  }
+  #container-main {
+    max-width: 960px;
+    margin: 0 auto;
+    background-color: #fff;
+  }
+  .main {
+    width: 100%;
+    height: auto;
+    overflow: hidden;
+  }
+  .img-container {
+    width: 100%;
+    height: auto;
+    /* padding-top: 7em; */
+  }
+  img.main-img {
+    width: 100%;
+    height: auto;
+  }
+}
