added smooth scroll

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
   font-family: "Montserrat", sans-serif;
   width: 100%;
   height: auto;
+  scroll-behavior: smooth;
 }
 h1,
 h3 {
@@ -88,21 +89,32 @@ img.main-img {
   width: auto;
   height: auto;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   margin: 2vh;
 }
 .main-nav > a {
   color: #fff;
+  background-image: radial-gradient(var(--orange), rgb(201, 108, 1));
   display: inline-block;
   width: 150px;
-  padding: 10px;
-  border: 2px solid #fff;
+  padding: 8px 15px;
+  margin: 15px;
+  border: 1px solid #fff;
+  /* box-shadow: 2px 2px 10px var(--secondary-color); */
   border-radius: 5px;
   text-align: center;
   text-decoration: none;
 }
+
+.main-nav > a > span {
+  margin-left: 10px;
+}
 .main-nav > a > i {
   animation: scale 0.6s infinite alternate;
+}
+
+.main-nav > a:hover {
+  /* filter: brightness(1.2); */
 }
 
 .nav {
@@ -145,7 +157,7 @@ img.main-img {
 
 @keyframes scale {
   to {
-    font-size: 1.1em;
+    transform: scale(0.7);
   }
 }
 
