--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,9 @@
   --primary-color: #008894;
   --secondary-color: #79add8;
   --orange: #ff934d;
-  --img-heigth: 40vh;
+  --img-heigth: 45vh;
   --top-heigth: 20vh;
-  --bottom-heigth: 40vh;
+  --bottom-heigth: 35vh;
 }
 * {
   margin: 0;
@@ -126,23 +126,34 @@ img.main-img {
   animation: scale 0.6s infinite alternate;
 }
 
-.main-nav > a:hover {
-  /* filter: brightness(1.2); */
+a:hover {
+  filter: brightness(0.8);
 }
 
 .nav {
+  position: relative;
   width: 100%;
-  height: 350px;
+  height: auto;
+  padding: 50px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
+.nav > a {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 0.8em;
+  text-transform: uppercase;
+  text-align: right;
+  color: var(--primary-color);
+}
 
 .bottom > p {
   color: aliceblue;
   text-align: center;
-  margin-bottom: 1em;
+  /* margin-bottom: 1em; */
 }
 .bottom > a {
   width: 50px;
@@ -238,8 +249,17 @@ footer {
   height: 250px;
   background-color: var(--primary-color);
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+}
+.desc {
+  max-width: 60vw;
+}
+.desc > p {
+  font-size: 0.9em;
+  text-align: center;
+  color: #fff;
 }
 
 @media (min-width: 960px) {
