--- a/css/style.css
+++ b/css/style.css
@@ -53,7 +53,7 @@ section {
   width: 100%;
   height: var(--img-heigth);
   /* overflow: hidden; */
-  overflow: scroll;
+  overflow: hidden;
   background-color: var(--primary-color);
 }
 
